k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker
  template:
    metadata:
      labels:
        app: expense-tracker
    spec:
      containers:
        - name: expense-tracker
          image: ghcr.io/ripisopol/expense-tracker:latest
          ports:
            - containerPort: 8000
