k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker
  namespace: default
spec:
  selector:
    app: expense-tracker
  ports:
    - port: 80
      targetPort: 8000
