k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: expense.rizalsolihin.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-tracker
                port:
                  number: 80
